<resources>    <string name="app_name">Patinator</string>    <string name="acerca_de">Acerca de...</string>    <string name="esta_aplicaci_n_ha_sido_desarrollada_por_un_grupo_de_estudiantes_como_proyecto_universitario">Esta aplicación ha sido desarrollada por un grupo de estudiantes como proyecto universitario.</string>    <string name="desbloquear">Desbloquear</string>    <string name="por_favor_apunta_al_qr">Por favor apunta al QR</string>    <string name="configuraci_n">Configuración</string>    <string name="buscar_patinete">Buscar</string>    <string name="title_activity_maps2">Mapa</string>  <string name="con_patinator_no_volver_s_a_llegar_tarde_encuentra_el_patinete_m_s_cercano_pulsando_el_bot_n_y_sorpr_ndete">Ofrecemos una alternativa de transporte más ecológica que un vehículo tradicional, de manera sencilla y económica. Si quiere saber más pulse en "Nuestros Patinetes". Para encontrar uno pulse "Buscar".</string>
   <string name="pulsa_el_bot_n_para_desbloquear_el_patinete">Pulsa el botón para desbloquear el patinete</string>    <string name="cerrar_sesi_n">Cerrar sesión</string>    <string name="pago">Pago</string>    <string name="patinete">Patinete disponible</string>    <string name="tenga_en_cuenta_que_el_uso_los_patinetes_es_un_servicio_de_pago_el_cual_se_le_cobrar_en_su_cuenta">Tenga en cuenta que el uso los patinetes es un servicio de pago, el cual se le cobrará en su cuenta.</string>    <string name="bloquear">Bloquear</string>    <string name="nuestros_patinetes">Nuestros Patinetes</string>    <string name="title_activity_info_pagina">Nuestros Patinetes</string>    <string name="action_settings">Configuración</string>    <string name="info_patinetes">Los desarrolladores de Patinator disponemos de diversos patinetes que te invitamos a conocer</string>    <string name="iwatroad_r9">iWatRoad R9 alcanza una velocidad de 25 km/h, con una potencia de 250W, batería de 7000 mAh, con lo que tiene una autonomía de entre 20 y 25 km, aguantando hasta 100kg.</string>    <string name="patinete_imagen">patinete_imagen</string>    <string name="infoText">Los materiales empleados en la fabricación de nuestros patinetes son los mejores actualmente, siendo tanto resistentes como ligeros.</string>    <string name="xiaomi_m365">Xiaomi M365 posee características similares a los patinetes iWantRoad R9, sin embargo destaca por tener su propia aplicación para el teléfono.</string>    <string name="infoText2">A pesar de la falsa creencia del alto consumo de los patinetes, estos son respetuosos con el medio ambiente, no contaminan y consumen poca eléctricidad.</string>    <string name="infoText3">Además de las características que vienen integradas en los patinetes, nuestra empresa incluye su propia tecnología (Raspberry, Arduino, diversos sensores) con la que recogemos datos como si el patinete ha sido volcado o si el usuario sobrepasa el límite de peso. </string>    <string name="con_patinator_no_volver_s_a_llegar_tarde_encuentra_el_patinete_m_s_cercano_pulsando_el_bot_n_y_sorpr_ndete">Ofrecemos una alternativa de transporte más ecológica que un vehículo tradicional, de manera sencilla y económica. Si quiere saber más pulse en "Nuestros Patinetes". Para encontrar uno pulse "Buscar".</string>    <string name="soporte">Soporte</string></resources>
